Fix check of URL already being downloaded.
This was completely broken, did not check if file actually existed
so would always download file